@@ -1,3 +1,12 @@
+2007-01-10  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	Fixes #394824
+
+	Patch by Jens Granseuer <jensgr@gmx.net>
+
+	* gnome-keybinding-properties.c (key_entry_controlling_key_changed,
+	setup_dialog, main): fixed leaks.
+
 2007-01-08  Rodrigo Moya <rodrigo@novell.com>
 
 	* gnome-keybinding-properties.c (create_dialog, clear_old_model):
